scrollbar fix

--- a/src/components/Herosection/Herosection.module.scss
+++ b/src/components/Herosection/Herosection.module.scss
@@ -221,7 +221,7 @@
 .scrollbar {
   position: fixed;
   top: 40vh;
-  left: 2vw;
+  right: 2vw;
   z-index: 100;
   width: 10px;
   border-radius: 10px;
